--- a/package.json
+++ b/package.json
@@ -4,22 +4,45 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/jest",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "lint": "npx eslint . --ext .ts"
+    "lint": "npx eslint . --ext .ts 'src/'",
+    "lint:fix": "npx eslint . --ext .ts --fix",
+    "database:setup": "sequelize db:drop; sequelize db:create;database:migrate",
+    "database:migrate": "sequelize db:migrate",
+    "migration:generate": "sequelize migration:generate --name",
+    "prod": "rm -rf ./build/* && tsc -p ./tsconfig.prod.json && node ./build/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.1",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "jest-html-reporter": "^3.7.0",
+    "sequelize-cli": "^6.6.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^6.15.0",
+    "pg": "^8.10.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.29.3",
+    "sequelize-typescript": "^2.1.5"
   }
 }
