--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,7 @@
-export DB_USER=postgres
+export DB_USER=
 export DB_PASSWORD=
-export DB_HOST=localhost
+export DB_PORT=
+export DB_HOST=
 export DB_DATABASE=foodtruckdb
 export API_PORT=
 export ENV=dev
