[Sahil] Fix. Lint Issues

--- a/.envrc
+++ b/.envrc
@@ -2,7 +2,7 @@ export DB_USER=
 export DB_PASSWORD=
 export DB_PORT=
 export DB_HOST=
-export DB_DATABASE=foodtruckdb
+export DB_DATABASE=
 export API_PORT=
 export ENV=dev
 export ALLOWED_URL=
