--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/jest",
+    "test": "export ENV=dev && ./node_modules/.bin/jest",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "npx eslint . --ext .ts 'src/' 'food_truck_UI'",
     "lint:fix": "npx eslint . --ext .ts --fix",
@@ -13,7 +13,7 @@
     "migration:generate": "sequelize migration:generate --name",
     "prod": "rm -rf ./build/* && tsc -p ./tsconfig.prod.json && node ./build/server.js",
     "build-ui": "cd ./food_truck_UI && ng build",
-    "run-ui-backend":"npm run build-ui && npm run dev"
+    "run-ui-backend": "npm run build-ui && npm run dev"
   },
   "keywords": [],
   "author": "",
